added initiali peers management
